# warmup-tool

./: LICENSE  README.md  pyproject.toml
src/warmup_tool/: main.py  powerlifting-warmup-assessment.csv
